cmake_minimum_required(VERSION 3.31)

set(CMAKE_CXX_STANDARD 14)

add_executable(SeqList_Static src/DS/code/linearList/SeqList_Static.cpp)

add_executable(SeqList_Dynamic src/DS/code/linearList/SeqList_Dynamic.cpp)

add_executable(LinkList src/DS/code/linearList/LinkList.cpp)

add_executable(LinkList_Headless src/DS/code/linearList/LinkList_Headless.cpp)

add_executable(DLinkList src/DS/code/linearList/DLinkList.cpp)

add_executable(LinkList_Circular src/DS/code/linearList/LinkList_Circular.cpp)

add_executable(DLinkList_Circular src/DS/code/linearList/DLinkList_Circular.cpp)

add_executable(DLinkList_Circular src/DS/code/stack/SqStack.cpp)

